--- a/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/03-2-switch.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/5-reference/03-2-switch.mdx
@@ -1,7 +1,7 @@
 ---
-title: Case Statement
+title: Switch Statement
 sidebar: 
-  label: " - Case Statement"
+  label: " - Switch Statement"
 ---
 import Aside from '/src/components/Aside.astro'
 import MySwiper from '../../../../../../components/react/myswiper.jsx'
