--- a/src/content/docs/book/part-1-instructions/3-control-flow/4-activities/3-calculator.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/4-activities/3-calculator.mdx
@@ -12,7 +12,7 @@ Build a simple statistics calculator. This will keep a running count, total, and
 This program will:
 
 - Ask the user to enter a value
-- Validate user input, ensuring that the value entered is a number
+- Validate the user's input, ensuring that the value entered is a number
 - Keep track of the number of values entered
 - Output the number of values entered, the total, and average
 - Ask the user if they want to add another value, and repeat the above if they enter anything other than "n", "N", or "no"
