--- a/src/content/docs/book/part-1-instructions/3-control-flow/4-activities/5-events.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/4-activities/5-events.mdx
@@ -6,7 +6,7 @@ sidebar:
 import NoCopy from '/src/components/NoCopy.astro'
 
 <NoCopy>
-With interactive programs you can use control flow to create event loop that allow you to respond to things that change - such as interactive user input, button presses, temperature changes, etc.
+With interactive programs you can use control flow to create an event loop that allows you to respond to things that change such as user input, button presses, temperature changes, etc.
 
 For this program, create a graphical application that will let the user draw circles to the screen. It should respond to the following events:
 
