--- a/src/content/docs/book/part-1-instructions/3-control-flow/4-activities/4-music.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/4-activities/4-music.mdx
@@ -7,7 +7,7 @@ import NoCopy from '/src/components/NoCopy.astro'
 import CodeScroll from '/src/components/CodeScroll.astro'
 
 <NoCopy>
-With control flow we can now build a simple music player that lets the user load and play songs.
+Build a simple music player that lets the user load and play songs.
 This program will:
 
 - Show a menu for the user to select from
