--- a/src/content/docs/book/part-2-organised-code/1-structuring-code/2-intro-tour/07-designing-structured-code.mdx
+++ b/src/content/docs/book/part-2-organised-code/1-structuring-code/2-intro-tour/07-designing-structured-code.mdx
@@ -84,5 +84,5 @@ After this video you should be able to appreciate well-structured code, and star
 </Accordion>
 
 :::tip
-If you want to run this code, download and unzip the [resources](../resources/Space_game_resources.zip), then add the folder "Resources" to the same folder as your code.
+If you want to run this code, download and unzip the [resources](/Resources/Space_game_resources.zip), then add the folder "Resources" to the same folder as your code.
 :::
