Update test your knowledge details for multiples and member functions

--- a/src/content/docs/book/part-2-organised-code/2-structuring-data/4-activities/3-1-entity.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-structuring-data/4-activities/3-1-entity.mdx
@@ -1,7 +1,7 @@
 ---
-title: Entity Manager
+title: Library Manager
 sidebar:
-    label: " - Entity Manager"
+    label: " - Library Manager"
 ---
 import NoCopy from '/src/components/NoCopy.astro'
 
@@ -18,7 +18,7 @@ Enter book location: https://programmers.guide
 Enter number of pages: 500
 
 Menu:
-1 - Read book
+1 - Enter book details
 2 - Print book
 3 - Quit
 Option: 2
@@ -29,7 +29,28 @@ Location: https://programmers.guide
 Pages: 500
 
 Menu:
-1 - Read book
+1 - Enter book details
+2 - Print book
+3 - Quit
+Option: 1
+
+Enter the name of the book: Monty Python's Big Red Book
+Enter book location: Book Shelf 1
+Enter number of pages: 68
+
+Menu:
+1 - Enter book details
+2 - Print book
+3 - Quit
+Option: 2
+
+Book details:
+Title: Monty Python's Big Red Book
+Location: Book Shelf 1
+Pages: 68
+
+Menu:
+1 - Enter book details
 2 - Print book
 3 - Quit
 Option: 3
